force-app/main/default/objects/Voter__c/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <label>Mailing Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>