force-app/main/default/objects/Voter__c/fields/Political_Party__c.field-meta.xml
<CustomField>
    <fullName>Political_Party__c</fullName>
    <label>Political Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Independant</fullName>
            </value>
            <value>
                <fullName>Democrat</fullName>
            </value>
            <value>
                <fullName>Republican</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>