force-app/main/default/objects/Voter__c/fields/Precinct__c.field-meta.xml
<CustomField>
    <fullName>Precinct__c</fullName>
    <label>Precinct</label>
    <referenceTo>Precinct__c</referenceTo>
    <relationshipLabel>voters</relationshipLabel>
    <relationshipName>voters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>